[package]
name = "find_a_job"
version = "0.1.0"
edition = "2021"
default-run = "list"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
html-escape = "0.2"
log = "0.4"
pretty_env_logger = "0.5"
regex = "1"
reqwest = { version = "0.12", features = ["blocking"] }
ron = "0.8"
serde = { version = "1", features = ["derive"] }
serde_regex = "1"
tiny_bail = { version = "0.3", default-features = false, features = [
    "log",
    "warn",
] }
url = { version = "2", features = ["serde"] }
