[package]
name = "find_a_job"
version = "0.1.0"
edition = "2021"
default-run = "list"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
html-escape = "0.2"
log = "0.4"
pretty_env_logger = "0.5"
regex = "1"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
serde_regex = "1"
thirtyfour = "0.34"
tiny_bail = { version = "0.4", default-features = false, features = [
    "log",
    "warn",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = { version = "2", features = ["serde"] }
